--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -13,4 +13,4 @@ COPY ./tailwind.config.ts ./tailwind.config.ts
 COPY ./postcss.config.js ./postcss.config.js
 COPY ./src ./src
 
-CMD npm start
+CMD npm run dev
