--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,9 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/index.ts",
+  "main": "index.ts",
   "scripts": {
-    "start": "ts-node-dev src/index.ts",
+    "start": "ts-node-dev --exit-child --watch src --poll src/index.ts",
     "build": "tsc",
     "start:prod": "node build/index.js",
     "resetDB": "ts-node-dev src/resetDb.ts",
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.9.5",
+    "argon2": "^0.31.2",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
@@ -34,7 +35,6 @@
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
-
     "typescript": "^5.3.3"
   }
 }
