--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/Dreyrk/wildrent#readme",
   "dependencies": {
+    "argon2": "^0.31.2",
     "eslint": "^8.56.0",
     "husky": "^9.0.7"
   },
