--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "graphql-scalars": "^1.22.4",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "prettier": "^3.2.4",
     "reflect-metadata": "^0.1.13",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.5",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "typescript": "^5.3.3"
   }
