--- a/backend/.envEXEMPLE
+++ b/backend/.envEXEMPLE
@@ -1,3 +1,10 @@
-USE_PORT=4001
-DEV_DATABASE_URL="localhost"
-DATABASE_URL="db"
+JWT_PRIVATE_KEY=zeyfgzeigfyzegfyuzegf
+NODE_ENV="development"
+CORS_ALLOWED_ORIGINS="https://example1.com,https://example2.com:4000"
+SERVER_HOST="localhost"
+SERVER_PORT=4002
+DB_HOST=db
+DB_NAME=postgres
+DB_USER=postgres
+DB_PASS=postgres
+DB_PORT=5432
