--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
     "check-types": "tsc --pretty --noEmit",
     "check-format": "prettier --check .",
     "check-lint": "eslint . ",
-    "test-all": "npm run check-format && npm run check-lint && npm run check-types && npm run build"
+    "test-all": "npm run check-format && npm run check-lint && npm run check-types && npm run build", 
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -29,12 +30,17 @@
     "sqlite3": "^5.1.6",
     "ts-node-dev": "^2.0.0",
     "type-graphql": "^2.0.0-beta.3",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "ts-dotenv": "^0.9.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+     "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
+    "@types/jest": "^29.5.12",
+    "graphql-tag": "^2.12.6"
   }
 }
