--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "dependencies": {
     "argon2": "^0.31.2",
     "eslint": "^8.56.0",
-    "husky": "^9.0.7"
+    "husky": "^9.0.7",
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.20.0",
