adding auto reload for windows

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ node_modules
 build
 frontend/.env
 backend/.env
+global.env
 
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
