--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,8 @@ services:
       - 4001:4001
     volumes:
       - ./backend/src:/app/src
+    env_file:
+      - ./global.env
 
   frontend:
     build: frontend
@@ -31,3 +33,5 @@ services:
       - 3000:3000
     volumes:
       - ./frontend/src:/app/src
+    env_file:
+      - ./global.env
