--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "@apollo/server": "^4.9.5",
     "argon2": "^0.31.2",
     "class-validator": "^0.14.0",
+    "cookie": "^0.6.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "graphql-scalars": "^1.22.4",
@@ -33,6 +34,7 @@
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
+    "@types/cookie": "^0.6.0",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.5",
