--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-merge": "^2.2.1",
     "typescript": "5.2.2"
   },
   "devDependencies": {
