test E2E for login in admin and user

--- a/docker-compose.e2e-tests.yml
+++ b/docker-compose.e2e-tests.yml
@@ -16,8 +16,9 @@ services:
       - 5432:5432
 
   backend:
+    depends_on:
     env_file:
-      - ./e2e-tests/.env
+      - backend/.env
     build: ./backend
     ports:
       - 4001:4001
@@ -33,6 +34,15 @@ services:
     depends_on:
       testDB:
         condition: service_healthy
+
+  frontend:
+    build: frontend
+    ports:
+      - 3000:3000
+    env_file:
+      - frontend/.env
+    volumes:
+      - ./frontend/src:/app/src
 
   client:
     build: './frontend'
