--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,11 +27,11 @@
     "graphql": "^16.8.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "next": "13.4.19",
+    "next": "^13.4.19",
     "prettier": "^3.2.4",
     "query-string": "^8.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "ts-node": "^10.9.2",
     "typescript": "5.2.2"
   },
