--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "prepare": "husky",
     "dev": "docker compose up --build",
     "prod": "docker compose -f docker-compose.production.yml up --build",
-    "testDB": "docker compose -f docker-compose.integration-tests.yml -p wildrent_testdb up "
+    "testDB": "docker compose -f docker-compose.integration-tests.yml -p wildrent_testdb up ",
+    "e2E": "docker compose -f docker-compose.e2e-tests.yml up"
   },
   "repository": {
     "type": "git",
@@ -30,8 +31,10 @@
   "dependencies": {
     "argon2": "^0.31.2",
     "eslint": "^8.56.0",
+    "graphql": "^16.8.1",
     "husky": "^9.0.7",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.20.0",
@@ -41,8 +44,9 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^5.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.0.0",
-    "prettier": "^3.2.4"
+    "prettier": "^3.2.4",
+    "typescript": "^5.3.3"
   }
 }
