--- a/package.json
+++ b/package.json
@@ -28,12 +28,18 @@
   },
   "homepage": "https://github.com/Dreyrk/wildrent#readme",
   "dependencies": {
+    "@testing-library/jest-dom": "^6.4.2",
     "argon2": "^0.31.2",
     "eslint": "^8.56.0",
     "husky": "^9.0.7",
+    "js-cookie": "^3.0.5",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
+    "@testing-library/react": "^14.2.1",
+    "@types/jest": "^29.5.12",
+    "@types/js-cookie": "^3.0.6",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
