--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "check-format": "prettier --check .",
     "check-lint": "eslint . ",
     "test-all": "npm run check-format && npm run check-lint && npm run check-types && npm run build",
+    "testDB:wait": "docker compose -f docker-compose.integration-tests.yml -p wildrent_testdb up --wait",
     "test": "jest"
   },
   "author": "",
