--- a/e2e-tests/.envEXAMPLE
+++ b/e2e-tests/.envEXAMPLE
@@ -1,4 +1,4 @@
-JWT_PRIVATE_KEY=zeyfgzeigfyzegfyuzegf
+JWT_PRIVATE_KEY="ZKlkzgkRpFczbn5abHQ3EVN3Wly5ePPqZeX5zzJXvQU="
 NODE_ENV="test"
 CORS_ALLOWED_ORIGINS="http://localhost:3000,http://localhost:4001"
 SERVER_HOST="localhost"
