--- a/e2e-tests/.env.example
+++ b/e2e-tests/.env.example
@@ -4,3 +4,8 @@ CORS_ALLOWED_ORIGINS="http://localhost:3000,http://localhost:4001"
 SERVER_HOST="localhost"
 SERVER_PORT="4001"
 DB_HOST=localhost
+DB_USER=postgres
+DB_PASS=postgres
+DB_NAME=postgres
+DB_PORT=5432
+BASE_URL=http://localhost:3000/
