--- a/frontend/dockerfile.production
+++ b/frontend/dockerfile.production
@@ -6,13 +6,15 @@ COPY package*.json ./
 
 RUN npm i
 
-COPY ./.env ./.env
 COPY ./tsconfig.json ./tsconfig.json
 COPY ./next-env.d.ts ./next-env.d.ts
 COPY ./next.config.mjs ./next.config.mjs
 COPY ./tailwind.config.ts ./tailwind.config.ts
 COPY ./postcss.config.js ./postcss.config.js
 COPY ./src ./src
+
+ARG NEXT_PUBLIC_GRAPHQL_API_URL
+ENV NEXT_PUBLIC_GRAPHQL_API_URL ${NEXT_PUBLIC_GRAPHQL_API_URL}
 
 RUN npm run build
 
