--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ build
 frontend/.env
 backend/.env
 global.env
+/e2e-tests/playwright-report/
 
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
