--- a/e2e-tests/.gitignore
+++ b/e2e-tests/.gitignore
@@ -1,10 +1,10 @@
 node_modules/
 test-results/
-/playwright-report/
-/playwright/.cache/
+playwright-report/
+playwright/.cache/
 dist/
 .env
 /test-results/
-/playwright-report/
+playwright-report/
 /blob-report/
-/playwright/.cache/
+playwright/.cache/
