--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.42.1",
     "@testing-library/react": "^14.2.1",
     "@types/jest": "^29.5.12",
     "@types/js-cookie": "^3.0.6",
