--- a/.github/workflows/2e2-tests.yml
+++ b/.github/workflows/2e2-tests.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: /e2e-tests
+        working-directory: e2e-tests
     steps:
       - uses: actions/checkout@v4
       # https://github.com/satackey/action-docker-layer-caching
