--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
 NODE_ENV="development"
-CORS_ALLOWED_ORIGINS="https://example1.com,https://example2.com:4000"
+CORS_ALLOWED_ORIGINS="http://localhost:3000,http://localhost:4001"
 SERVER_HOST="localhost"
 SERVER_PORT=4001
 DB_HOST=localhost
