--- a/e2e-tests/docker-compose.e2e-tests.yml
+++ b/e2e-tests/docker-compose.e2e-tests.yml
@@ -6,9 +6,9 @@ services:
       POSTGRES_PASSWORD: postgres
     healthcheck:
       test: ['CMD-SHELL', 'pg_isready -d postgres -U postgres']
-      interval: 2s
-      timeout: 2s
-      retries: 20
+      interval: 10s
+      timeout: 5s
+      retries: 5
     tmpfs: /var/lib/postgresql
     ports:
       - 5432:5432
@@ -25,14 +25,14 @@ services:
       - DB_HOST=testDB
     healthcheck:
       test: "curl --fail --request GET -H 'content-type:application/json' --url 'http://localhost:4001/graphql?query=%7B__typename%7D'"
-      interval: 5s
+      interval: 10s
       timeout: 5s
-      retries: 10
+      retries: 5
     depends_on:
       testDB:
         condition: service_healthy
 
-  client:
+  frontend:
     build: '../frontend'
     ports:
       - 3000:3000
