--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,8 +7,8 @@ COPY package*.json ./
 RUN npm i
 
 COPY ./.env ./.env
-COPY tsconfig.json tsconfig.json
-COPY src src
+COPY ./.tsconfig.json ./.tsconfig.json
+COPY ./.src ./.src
 
 
 CMD npm run start
