--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,6 +2,10 @@ FROM node:20.9.0-alpine3.17
 
 WORKDIR /app
 
+RUN apk --no-cache add curl
+RUN apk add make g++ python3 git
+RUN npm i -g node-pre-gyp
+
 COPY package*.json ./
 
 RUN npm i
