--- a/backend/package.json
+++ b/backend/package.json
@@ -31,21 +31,21 @@
     "prettier": "^3.2.4",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.1.6",
+    "ts-dotenv": "^0.9.1",
     "ts-node-dev": "^2.0.0",
     "type-graphql": "^2.0.0-beta.3",
-    "typeorm": "^0.3.17",
-    "ts-dotenv": "^0.9.1"
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@types/cookie": "^0.6.0",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.5",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
-    "typescript": "^5.3.3",
+    "graphql-tag": "^2.12.6",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
-    "@types/jest": "^29.5.12",
-    "graphql-tag": "^2.12.6"
+    "typescript": "^5.3.3"
   }
 }
