--- a/frontend/dockerfile.production
+++ b/frontend/dockerfile.production
@@ -6,6 +6,7 @@ COPY package*.json ./
 
 RUN npm i
 
+COPY ./public ./public
 COPY ./tsconfig.json ./tsconfig.json
 COPY ./next-env.d.ts ./next-env.d.ts
 COPY ./next.config.mjs ./next.config.mjs
