--- a/.github/workflows/build-frontend.yml
+++ b/.github/workflows/build-frontend.yml
@@ -23,6 +23,8 @@ jobs:
           push: true
           build-args: |
             NEXT_PUBLIC_GRAPHQL_API_URL=http://localhost:4000
-          context: './frontend'
+          context: '{{defaultContext}}:frontend'
           file: 'dockerfile.production'
-          tags: scrip/2023-09-wns-bleu-wildrent-client:staging
+          tags: school/2023-09-wns-bleu-wildrent-client:staging
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
