--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,6 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.6",
-    "@heroicons/react": "^2.0.18",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@types/jest": "^29.5.12",
@@ -33,6 +32,7 @@
     "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.1.0",
     "tailwind-merge": "^2.2.1",
     "ts-node": "^10.9.2",
     "typescript": "5.2.2"
