--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,6 +1,7 @@
 services:
   db:
     image: postgres:15-alpine
+    stop_grace_period: 0s
     environment:
       - POSTGRES_PASSWORD=postgres
     healthcheck:
@@ -8,8 +9,14 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
-    ports:
-      - '5432:5432'
+
+  # upload-service:
+  #   environment:
+  #     - HOST=/
+  #   stop_grace_period: 0s
+  #   build: file-upload-service
+  #   volumes:
+  #     - ./file-upload-service/files:/app/files
 
   backend:
     depends_on:
@@ -18,17 +25,24 @@ services:
 
     environment:
       - DB_HOST=db
+    stop_grace_period: 0s
     build:
       context: backend
       dockerfile: dockerfile.production
     env_file: backend/.env
-    ports:
-      - 4001:4001
 
   frontend:
+    stop_grace_period: 0s
     build:
       context: frontend
       dockerfile: dockerfile.production
     env_file: frontend/.env
+
+  gateway:
+    stop_grace_period: 0s
+    restart: always
+    build:
+      context: gateway
+      dockerfile: Dockerfile.production
     ports:
-      - 3000:3000
+      - ${GATEWAY_PORT-80}:80
