--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,14 +1,20 @@
+volumes:
+  prodDB:
+
 services:
   db:
     image: postgres:15-alpine
     stop_grace_period: 0s
     environment:
-      - POSTGRES_PASSWORD=postgres
+      POSTGRES_PASSWORD: ${DB_PASS-postgres}
+      PGUSER: ${DB_USER-postgres}
     healthcheck:
       test: ['CMD-SHELL', 'pg_isready -d postgres -U postgres']
       interval: 10s
       timeout: 5s
       retries: 5
+    volumes:
+      - prodDB:/var/lib/postgresql/data
 
   # upload-service:
   #   environment:
@@ -19,24 +25,28 @@ services:
   #     - ./file-upload-service/files:/app/files
 
   backend:
+    environment:
+      DB_HOST: db
+      DB_PASS: ${DB_PASS-postgres}
+      DB_USER: ${DB_USER-postgres}
+      JWT_PRIVATE_KEY: ${JWT_PRIVATE_KEY:-changeme}
+      NODE_ENV: ${NODE_ENV:-production}
+      CORS_ALLOWED_ORIGINS: ${CORS_ALLOWED_ORIGINS:-changeme}
+    stop_grace_period: 0s
     depends_on:
       db:
         condition: service_healthy
-
-    environment:
-      - DB_HOST=db
-    stop_grace_period: 0s
     build:
       context: backend
       dockerfile: dockerfile.production
-    env_file: backend/.env
 
   frontend:
+    environment:
+      JWT_PRIVATE_KEY: ${JWT_PRIVATE_KEY:-changeme}
     stop_grace_period: 0s
     build:
       context: frontend
       dockerfile: dockerfile.production
-    env_file: frontend/.env
 
   gateway:
     stop_grace_period: 0s
