--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ backend/.env
 global.env
 /e2e-tests/playwright-report/
 .env.production
+.env.staging
 
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
