--- a/.github/workflows/build-backend.yml
+++ b/.github/workflows/build-backend.yml
@@ -1,8 +1,16 @@
 name: build and push production server to dockerhub
 
 on:
-  pull_request:
-    branches: main
+  workflow_call:
+    inputs:
+      image_name:
+        type: string
+        required: true
+    secrets:
+      DOCKERHUB_USERNAME:
+        required: true
+      DOCKERHUB_TOKEN:
+        required: true
 
 jobs:
   build-and-push-server:
@@ -23,6 +31,6 @@ jobs:
           push: true
           context: '{{defaultContext}}:backend'
           file: 'dockerfile.production'
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/2023-09-wns-bleu-wildrent-server:staging
+          tags: ${{ inputs.image_name }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
