--- a/.github/workflows/build-frontend.yml
+++ b/.github/workflows/build-frontend.yml
@@ -25,6 +25,6 @@ jobs:
             NEXT_PUBLIC_GRAPHQL_API_URL=http://localhost:4000
           context: '{{defaultContext}}:frontend'
           file: 'dockerfile.production'
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/2023-09-wns-bleu-wildrent-client
+          tags: ${{ inputs.image_name }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
