--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -25,13 +25,13 @@ services:
     depends_on:
       db:
         condition: service_healthy
-    image: mariontassy/2023-09-wns-bleu-wildrent-server:lastest
+    image: mariontassy/2023-09-wns-bleu-wildrent-server
 
   frontend:
     environment:
       JWT_PRIVATE_KEY: ${JWT_PRIVATE_KEY:-changeme}
     stop_grace_period: 0s
-    image: mariontassy/2023-09-wns-bleu-wildrent-client:lastest
+    image: mariontassy/2023-09-wns-bleu-wildrent-client
 
   gateway:
     stop_grace_period: 0s
