--- a/.github/workflows/build-frontend.yml
+++ b/.github/workflows/build-frontend.yml
@@ -1,8 +1,16 @@
 name: build and push production client to dockerhub
 
 on:
-  pull_request:
-    branches: main
+  workflow_call:
+    inputs:
+      image_name:
+        type: string
+        required: true
+    secrets:
+      DOCKERHUB_USERNAME:
+        required: true
+      DOCKERHUB_TOKEN:
+        required: true
 
 jobs:
   build-and-push-client:
@@ -21,10 +29,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
-          build-args: |
-            NEXT_PUBLIC_GRAPHQL_API_URL=http://localhost:4000
           context: '{{defaultContext}}:frontend'
-          file: 'dockerfile.production'
+          file: 'Dockerfile.production'
           tags: ${{ inputs.image_name }}
           cache-from: type=gha
-          cache-to: type=gha,mode=max
