--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -20,7 +20,7 @@ services:
       DB_USER: ${DB_USER-postgres}
       JWT_PRIVATE_KEY: ${JWT_PRIVATE_KEY:-changeme}
       NODE_ENV: ${NODE_ENV:-production}
-      CORS_ALLOWED_ORIGINS: ${CORS_ALLOWED_ORIGINS:-changeme}
+      CORS_ALLOWED_ORIGINS: ${CORS_ALLOWED_ORIGINS:-https://0923-bleu-4.wns.wilders.dev/}
     stop_grace_period: 0s
     depends_on:
       db:
@@ -41,6 +41,7 @@ services:
       dockerfile: Dockerfile.production
     ports:
       - ${GATEWAY_PORT-80}:80
+    volumes: ./logs:/var/log/nginx
 
 volumes:
   prodDB:
