add function for mailing confirmation

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,3 +8,9 @@ DB_USER=postgres
 DB_PASS=postgres
 DB_PORT=5432
 JWT_PRIVATE_KEY="ZKlkzgkRpFczbn5abHQ3EVN3Wly5ePPqZeX5zzJXvQU="
+SMTP_HOST=in-v3.mailjet.com
+SMTP_PORT=465
+SMTP_USER=5eda394690b56d4b85a5edba20c68375
+SMTP_PASS=7ab73622229ac8a210e75389dead4c0e
+EMAIL_FROM=contactwildrent@gmail.com
+FRONTEND_URL=http://localhost:3000
