--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "express": "^4.18.2",
     "graphql-scalars": "^1.22.4",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.13",
     "pg": "^8.11.3",
     "prettier": "^3.2.4",
     "reflect-metadata": "^0.1.13",
@@ -42,6 +43,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/nodemailer": "^6.4.15",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "graphql-tag": "^2.12.6",
     "jest": "^29.7.0",
