--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "graphql": "^16.8.1",
     "husky": "^9.0.7",
     "js-cookie": "^3.0.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.1.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1"
