--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "js-cookie": "^3.0.5",
-    "next": "13.4.19",
+    "next": "^14.2.4",
     "prettier": "^3.2.4",
     "query-string": "^8.1.0",
     "react": "18.2.0",
