--- a/e2e-tests/.env.example
+++ b/e2e-tests/.env.example
@@ -1,11 +1,16 @@
-JWT_PRIVATE_KEY="ZKlkzgkRpFczbn5abHQ3EVN3Wly5ePPqZeX5zzJXvQU="
-NODE_ENV="test"
-CORS_ALLOWED_ORIGINS="http://localhost:3000,http://localhost:4001"
+NODE_ENV="development"
+CORS_ALLOWED_ORIGINS="https://example1.com,https://example2.com:4000"
 SERVER_HOST="localhost"
-SERVER_PORT="4001"
+SERVER_PORT=4001
 DB_HOST=localhost
+DB_NAME=postgres
 DB_USER=postgres
 DB_PASS=postgres
-DB_NAME=postgres
 DB_PORT=5432
-BASE_URL=http://localhost:3000/
+JWT_PRIVATE_KEY="ZKlkzgkRpFczbn5abHQ3EVN3Wly5ePPqZeX5zzJXvQU="
+SMTP_HOST=in-v3.mailjet.com
+SMTP_PORT=465
+SMTP_USER=5eda394690b56d4b85a5edba20c68375
+SMTP_PASS=7ab73622229ac8a210e75389dead4c0e
+EMAIL_FROM=contactwildrent@gmail.com
+FRONTEND_URL=http://localhost:3000
