--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -11,7 +11,7 @@ services:
       timeout: 5s
       retries: 10
     volumes:
-      - prodDB:/var/lib/postgresql/data
+      - stagingDB:/var/lib/postgresql/data
 
   backend:
     environment:
@@ -38,9 +38,10 @@ services:
     restart: always
     build:
       context: gateway
-      dockerfile: Dockerfile.production
+      dockerfile: Dockerfile
     ports:
       - ${GATEWAY_PORT-80}:80
+    volumes: -.log:/var/log/nginx
 
 volumes:
-  prodDB:
+  stagingDB:
