responsive user ok

--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -43,7 +43,8 @@ services:
       dockerfile: Dockerfile.production
     ports:
       - ${GATEWAY_PORT-80}:80
-    volumes: -.log:/var/log/nginx
+    volumes:
+      - .log:/var/log/nginx
 
 volumes:
   prodDB:
