--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -4,7 +4,25 @@ on:
   push:
     branches: ['main']
 jobs:
+  build-and-push-server:
+    uses: WildCodeSchool/2023-09-wns-bleu-wildrent/.github/workflows/build-backend.yml@dev
+    secrets:
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+    with:
+      image_name: mariontassy/2023-09-wns-bleu-wildrent-server
+
+  build-and-push-client:
+    uses: WildCodeSchool/2023-09-wns-bleu-wildrent/.github/workflows/build-frontend.yml@dev
+    secrets:
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+    with:
+      image_name: mariontassy/2023-09-wns-bleu-wildrent-client
   notify-vps:
+    needs:
+      - build-and-push-client
+      - build-and-push-server
     runs-on: ubuntu-latest
     steps:
       - name: Call VPS webhook to update production
